<resources>
    <string name="app_name">product</string>
    <string name="search">Search</string>
    <string name="network_error">Network error. Please try again</string>
    <string name="not_found">No product found with the provided identifier.</string>
    <string name="info">Hello! To get the closing price details of a product, type in the product\'s identifier in the search field below.</string>
    <string name="info_2">You can also choose from our pre-defined list of products:</string>
    <string name="us500">US500</string>
    <string name="sb26496">sb26496</string>
    <string name="euro_usd">EURO/USD</string>
    <string name="sb26502">sb26502</string>
    <string name="gold">Gold</string>
    <string name="sb28248">sb28248</string>
    <string name="current_price">Current Price:\t</string>
    <string name="previous_price">Previous Price:\t</string>
    <string name="invalid_input">Enter a valid product identifier.</string>
    <string name="germany30">Germany30</string>
    <string name="please_wait">Please wait...</string>
    <string name="markets_are_closed">Markets are temporarily closed for the weekend. Try again on work days.</string>
</resources>