<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.search.ProductSearchFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_ash"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/bux_logo1"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/light_ash"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/lato"
            android:text="@string/info"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:hintTextColor="@color/light_ash"
            app:endIconDrawable="@drawable/ic_close">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvSearch"
                android:fontFamily="@font/lato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:hint="@string/search"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:backgroundTint="@color/pink"
            android:fontFamily="@font/lato"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:indeterminateTint="@color/pink"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button" />

        <TextView
            android:id="@+id/textView"
            android:fontFamily="@font/lato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/info_2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/germany"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circle"
                    android:layout_width="5dp"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Germany30" />

                    <TextView
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="sb26493" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/us500"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circle"
                    android:layout_width="5dp"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/us500" />

                    <TextView
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sb26496" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/euro"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circle"
                    android:layout_width="5dp"
                    android:layout_height="5dp"/>

                <LinearLayout
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/euro_usd" />

                    <TextView
                        android:fontFamily="@font/lato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sb26502" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>