<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_ash"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/bux_logo1"
            app:layout_constraintBottom_toTopOf="@+id/tvProductName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/light_ash"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintBottom_toTopOf="@id/tvProductIdentifier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Germany9000" />

        <TextView
            android:id="@+id/tvProductIdentifier"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size_default"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="sb449954" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size_default"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            app:layout_constraintBottom_toTopOf="@id/priceLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Description to be shown" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/priceLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/viewLoadingLiveIndicator"
                app:shimmer_auto_start="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tvNetworkError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/networkIndicator"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/circle_green" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/layout2"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/viewLoadingLiveIndicator">

                <TextView
                    android:id="@+id/tvCurrentPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/current_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_default"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCurrentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="@dimen/text_size_default"
                    app:layout_constraintStart_toEndOf="@+id/tvCurrentPriceLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="$12345" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tvNetworkError"
                app:layout_constraintStart_toEndOf="@id/viewLoadingLiveIndicator">

                <TextView
                    android:id="@+id/tvPreviousPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/previous_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_default"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPreviousPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:textSize="@dimen/text_size_default"
                    app:layout_constraintStart_toEndOf="@+id/tvPreviousPriceLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="$12345" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:src="@drawable/arrow_down"
                app:layout_constraintBottom_toTopOf="@+id/tvNetworkError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:textSize="@dimen/text_size_default"
                app:layout_constraintBottom_toTopOf="@+id/tvNetworkError"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="50%" />

            <TextView
                android:id="@+id/tvNetworkError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/black"
                android:fontFamily="@font/lato"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/network_error"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>